--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "cordova-android": "8.0.0",
     "ionic-angular": "3.9.5",
     "ionicons": "3.0.0",
+    "mathjs": "^5.10.3",
+    "node-matrices": "^1.0.0",
     "rref": "0.0.1",
     "rxjs": "5.5.11",
     "sw-toolbox": "3.6.0",
