--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@ionic-native/status-bar": "~4.20.0",
     "@ionic/storage": "2.2.0",
     "cordova-android": "8.0.0",
+    "cordova-plugin-printer": "^0.8.0",
     "ionic-angular": "3.9.5",
     "ionicons": "3.0.0",
     "mathjs": "^5.10.3",
@@ -54,7 +55,8 @@
       "cordova-plugin-ionic-webview": {
         "ANDROID_SUPPORT_ANNOTATIONS_VERSION": "27.+"
       },
-      "cordova-plugin-ionic-keyboard": {}
+      "cordova-plugin-ionic-keyboard": {},
+      "cordova-plugin-printer": {}
     },
     "platforms": [
       "android"
